--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+
+@import url("https://fonts.googleapis.com/css?family=Manrope");
+@import url("https://fonts.cdnfonts.com/css/iranyekan");
+
+/* --primaryColor:" #6d28d9"; */
+
+
+.darkTheme{
+  font-family: "Manrope";
+  background:-moz-linear-gradient(100deg, rgba(0, 40, 83, 1) 0%, rgba(0, 0, 0, 1) 100%); 
+
+  /* safari 5.1+,chrome 10+ */
+  background:-webkit-linear-gradient(100deg, rgba(0, 40, 83, 1) 0%, rgba(0, 0, 0, 1) 100%);
+
+  /* opera 11.10+ */
+  background:-o-linear-gradient(100deg, rgba(0, 40, 83, 1) 0%, rgba(0, 0, 0, 1) 100%);
+
+  /* ie 6-9 */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#002853', GradientType=0 );
+
+  /* ie 10+ */
+  background:-ms-linear-gradient(100deg, rgba(0, 40, 83, 1) 0%, rgba(0, 0, 0, 1) 100%);
+
+  /* global 94%+ browsers support */
+  background:linear-gradient(100deg, rgba(0, 40, 83, 1) 0%, rgba(0, 0, 0, 1) 100%);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.lightTheme{
+  font-family: "Manrope";
+  background:-moz-linear-gradient(88deg, rgba(255, 72, 32, 0.36) 0%, rgba(214, 230, 233, 1) 85%); 
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+    /* safari 5.1+,chrome 10+ */
+    background:-webkit-linear-gradient(88deg, rgba(255, 72, 32, 0.36) 0%, rgba(214, 230, 233, 1) 85%);
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+    /* opera 11.10+ */
+    background:-o-linear-gradient(88deg, rgba(255, 72, 32, 0.36) 0%, rgba(214, 230, 233, 1) 85%);
 
-.App-link {
-  color: #61dafb;
-}
+    /* ie 6-9 */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#D6E6E9', endColorstr='#FF4820', GradientType=0 );
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    /* ie 10+ */
+    background:-ms-linear-gradient(88deg, rgba(255, 72, 32, 0.36) 0%, rgba(214, 230, 233, 1) 85%);
+
+    /* global 94%+ browsers support */
+    background:linear-gradient(88deg, rgba(255, 72, 32, 0.36) 0%, rgba(214, 230, 233, 1) 85%);
 }
